<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bw"
    tools:context=".fragments.CityChangeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_city"
        android:textSize="40sp"
        android:textColor="@color/colorDarkGrey"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:id="@+id/textTypeCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_type"
        android:textSize="40sp"
        android:textColor="@color/colorDarkGrey"
        android:textAlignment="center"
        android:layout_marginTop="280dp"/>


    <EditText
        android:id="@+id/typeCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:inputType="text"
        android:hint="@string/type_your_city"
        android:layout_marginTop="350dp"
        android:textColor="@color/colorText"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/colorText"
        android:background="@drawable/rounder_button"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="90dp"/>


    <Spinner
        android:id="@+id/spinner"
        style="@style/spinner_style"
         />

</FrameLayout>